--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "reactjs-popup": "^2.0.6",
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^3.1.0",
